implement DayZ server automatic download